--- a/apps/views/githubapp/index.erb
+++ b/apps/views/githubapp/index.erb
@@ -1,1 +1,18 @@
-GithubappApp!
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand">Visualizations</a>
+      <ul class="nav">
+        <li>
+          <a href="/">Map</a>
+        </li>
+        <li>
+          <a href="/background">Background</a>
+        </li>
+        <li>
+          <a href="/outbreaks">Data</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
